--- a/Mask_RCNN/Evaluation/Prostate_evaluation_mode_post_processing.ipynb
+++ b/Mask_RCNN/Evaluation/Prostate_evaluation_mode_post_processing.ipynb
@@ -21,15 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import module from system lib\n",
     "import os\n",
     "import sys\n",
+    "sys.path.append(os.path.dirname(os.getcwd()))\n",
     "import random\n",
     "import math\n",
     "import re\n",
@@ -44,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,69 +80,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Configurations:\n",
-      "BACKBONE_SHAPES                [[128 128]\n",
-      " [ 64  64]\n",
-      " [ 32  32]\n",
-      " [ 16  16]\n",
-      " [  8   8]]\n",
-      "BACKBONE_STRIDES               [4, 8, 16, 32, 64]\n",
-      "BATCH_SIZE                     1\n",
-      "BBOX_STD_DEV                   [ 0.1  0.1  0.2  0.2]\n",
-      "DETECTION_CROP                 [128, 384, 128, 384]\n",
-      "DETECTION_MAX_INSTANCES        100\n",
-      "DETECTION_MIN_CONFIDENCE       0.5\n",
-      "DETECTION_NMS_THRESHOLD        1\n",
-      "GPU_COUNT                      1\n",
-      "IMAGES_PER_GPU                 1\n",
-      "IMAGE_MAX_DIM                  512\n",
-      "IMAGE_MIN_DIM                  512\n",
-      "IMAGE_PADDING                  True\n",
-      "IMAGE_SHAPE                    [512 512   3]\n",
-      "LEARNING_MOMENTUM              0.9\n",
-      "LEARNING_RATE                  0.001\n",
-      "MASK_POOL_SIZE                 14\n",
-      "MASK_SHAPE                     [28, 28]\n",
-      "MAX_GT_INSTANCES               100\n",
-      "MEAN_PIXEL                     [ 193.97800579  120.89113632  183.79060979]\n",
-      "MINI_MASK_SHAPE                (56, 56)\n",
-      "MODE                           16\n",
-      "NAME                           prostate\n",
-      "NUM_CLASSES                    4\n",
-      "POOL_SIZE                      7\n",
-      "POST_NMS_ROIS_INFERENCE        1000\n",
-      "POST_NMS_ROIS_TRAINING         2000\n",
-      "ROI_POSITIVE_RATIO             0.33\n",
-      "RPN_ANCHOR_RATIOS              [0.5, 1, 2]\n",
-      "RPN_ANCHOR_SCALES              (32, 64, 128, 256, 512)\n",
-      "RPN_ANCHOR_STRIDE              1\n",
-      "RPN_BBOX_STD_DEV               [ 0.1  0.1  0.2  0.2]\n",
-      "RPN_NMS_THRESHOLD              0.7\n",
-      "RPN_TRAIN_ANCHORS_PER_IMAGE    256\n",
-      "STEPS_PER_EPOCH                1000\n",
-      "TRAIN_ROIS_PER_IMAGE           200\n",
-      "USE_MINI_MASK                  True\n",
-      "USE_RPN_ROIS                   True\n",
-      "USE_TUMORCLASS                 True\n",
-      "VALIDATION_STEPS               50\n",
-      "WEIGHT_DECAY                   0.0001\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Specify the dir that store the prostate dataset\n",
     "# dataset_dir = os.path.join(os.path.dirname(os.getcwd()), \"Data_Pre_Processing/cedars-224\")\n",
-    "dataset_dir = os.path.join(\"/data/wenyuan/Mask-RCNN/Mask-RCNN-Path\", \"Data_Pre_Processing/cedars-224\")\n",
+    "dataset_dir = os.path.join(\"/data/wenyuan/Path_R_CNN\", \"Data_Pre_Processing/cedars-224\")\n",
     "# We do 5-fold validation, specify which fold to be exclude for the current run\n",
     "held_out_set = 4\n",
     "# Featch the mean_pixel based on the training data (data exclude the held_out_set)\n",
@@ -173,17 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading weights from  /scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/logs/prostate20180223T1554_held_out_set_4/mask_rcnn_prostate_0071.h5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Recreate the model in inference mode\n",
     "model = modellib.MaskRCNN(mode=\"detection\", \n",
@@ -219,10 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dataset_val = prostate.ProstateDataset()\n",
@@ -241,10 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def Post_Processing(img, prob):\n",
@@ -273,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,24 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Confusion Matrix:\n",
-      " [[ 45358315.   1697425.   3663320.    858362.]\n",
-      " [  1193875.  10930164.   1736414.    302055.]\n",
-      " [  2681236.    584861.  31089459.     83417.]\n",
-      " [   296534.    260562.    170666.   7096663.]]\n",
-      " mIOU: 0.756885952125 \n",
-      " IOU for each class: [0.81361567898526443, 0.65429099505571742, 0.77705439172965796, 0.78258274272933759] \n",
-      " Below_th: False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mIOU, IOU, below_th = utils.compute_mIOU(C_MATRIX, th = 0.5)\n",
     "print('Confusion Matrix:\\n', C_MATRIX)\n",
@@ -377,89 +293,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# import scipy.io\n",
-    "# filename = \"Set%d_w_DNH_CRF\"%held_out_set\n",
-    "# C_Matrix_dict = {filename:C_MATRIX}\n",
-    "# file_path = filename + \".mat\"\n",
-    "# scipy.io.savemat(file_path, C_Matrix_dict)"
+    "import scipy.io\n",
+    "filename = \"Set%d_w_DNH_CRF\"%held_out_set\n",
+    "C_Matrix_dict = {filename:C_MATRIX}\n",
+    "file_path = filename + \".mat\"\n",
+    "scipy.io.savemat(file_path, C_Matrix_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1648"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(r_tumor_probs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "Tumor_indicator = []\n",
     "for i in range(0, len(r_tumor_probs), evaluation_config.MODE):\n",
     "    r = 1 if sum(r_tumor_probs[i : i + evaluation_config.MODE]) > 0 else 0\n",
-    "    Tumor_indicator.append(r)\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.savetxt(\"Set%d_ENH_RES.txt\"%held_out_set, Tumor_indicator)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "103"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(Tumor_indicator)"
+    "    Tumor_indicator.append(r)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.savetxt(\"Set%d_ENH_RES.txt\"%held_out_set, Tumor_indicator)"
+   ]
   }
  ],
  "metadata": {
@@ -479,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
