--- a/Mask_RCNN/Extract_batch_mean.ipynb
+++ b/Mask_RCNN/Extract_batch_mean.ipynb
@@ -2,70 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Configurations:\n",
-      "BACKBONE_SHAPES                [[256 256]\n",
-      " [128 128]\n",
-      " [ 64  64]\n",
-      " [ 32  32]\n",
-      " [ 16  16]]\n",
-      "BACKBONE_STRIDES               [4, 8, 16, 32, 64]\n",
-      "BATCH_SIZE                     1\n",
-      "BBOX_STD_DEV                   [ 0.1  0.1  0.2  0.2]\n",
-      "DETECTION_MAX_INSTANCES        100\n",
-      "DETECTION_MIN_CONFIDENCE       0.7\n",
-      "DETECTION_NMS_THRESHOLD        0.3\n",
-      "GPU_COUNT                      1\n",
-      "IMAGES_PER_GPU                 1\n",
-      "IMAGE_MAX_DIM                  1024\n",
-      "IMAGE_MIN_DIM                  800\n",
-      "IMAGE_PADDING                  True\n",
-      "IMAGE_SHAPE                    [1024 1024    3]\n",
-      "LEARNING_MOMENTUM              0.9\n",
-      "LEARNING_RATE                  0.001\n",
-      "MASK_POOL_SIZE                 14\n",
-      "MASK_SHAPE                     [28, 28]\n",
-      "MAX_GT_INSTANCES               100\n",
-      "MEAN_PIXEL                     [ 123.7  116.8  103.9]\n",
-      "MINI_MASK_SHAPE                (56, 56)\n",
-      "NAME                           prostate\n",
-      "NUM_CLASSES                    4\n",
-      "POOL_SIZE                      7\n",
-      "POST_NMS_ROIS_INFERENCE        1000\n",
-      "POST_NMS_ROIS_TRAINING         2000\n",
-      "ROI_POSITIVE_RATIO             0.33\n",
-      "RPN_ANCHOR_RATIOS              [0.5, 1, 2]\n",
-      "RPN_ANCHOR_SCALES              (32, 64, 128, 256, 512)\n",
-      "RPN_ANCHOR_STRIDE              1\n",
-      "RPN_BBOX_STD_DEV               [ 0.1  0.1  0.2  0.2]\n",
-      "RPN_NMS_THRESHOLD              0.7\n",
-      "RPN_TRAIN_ANCHORS_PER_IMAGE    256\n",
-      "STEPS_PER_EPOCH                1000\n",
-      "TRAIN_ROIS_PER_IMAGE           200\n",
-      "USE_MINI_MASK                  True\n",
-      "USE_RPN_ROIS                   True\n",
-      "VALIDATION_STEPS               50\n",
-      "WEIGHT_DECAY                   0.0001\n",
-      "\n",
-      "\n",
-      "[ 196.08257579  124.99100334  186.21242743]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import prostate\n",
+    "import os\n",
     "config = prostate.ProstateConfig()\n",
-    "config.display()\n",
-    "\n",
     "# Training dataset\n",
-    "dataset_dir = \"/Users/wenyuan/Documents/MII/Mask-RCNN/Data_Pre_Processing/cedars-224\"\n",
+    "data_path = '/data/wenyuan/Path_R_CNN/Data_Pre_Processing'\n",
+    "dataset_dir = os.path.join(data_path, 'cedars-224')\n",
     "subset_1 = [0, 1, 2, 3, 6, 7, 8, 9]\n",
     "dataset_train = prostate.ProstateDataset()\n",
     "dataset_train.load_prostate(dataset_dir, subset_1)\n",
@@ -79,67 +25,6 @@
     "mean = mean_sum / len(dataset_train.image_ids)\n",
     "print(mean)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 2 3 4 5 6 7]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dataset_train.image_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1200, 1200, 3)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(image.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 196.47102153  124.22216458  186.21236597]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "print(np.mean(image, axis = (0, 1)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -158,7 +43,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
