--- a/Mask_RCNN/Training/Train_prostate.ipynb
+++ b/Mask_RCNN/Training/Train_prostate.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mask R-CNN - Train on Prostate Dataset\n",
+    "# Path R-CNN - Train on Prostate Dataset\n",
     "\n",
     "\n",
-    "This notebook shows how to train Mask R-CNN on prostate dataset. You'd need a GPU, though, because the network backbone is a Resnet101, which would be too slow to train on a CPU. On a GPU, you can start to get okay-ish results in a few minutes, and good results in less than an hour.\n",
+    "This notebook shows how to train Path R-CNN on prostate dataset. You'd need a GPU, though, because the network backbone is a Resnet101, which would be too slow to train on a CPU. On a GPU, you can start to get okay-ish results in a few minutes, and good results in less than an hour.\n",
     "\n",
     "The code of the Prostate dataset can be found in prostate.py."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +28,7 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "sys.path.append(os.path.dirname(os.getcwd()))\n",
     "import random\n",
     "import math\n",
     "import re\n",
@@ -174,8 +175,7 @@
    "outputs": [],
    "source": [
     "# Training dataset\n",
-    "# dataset_dir = \"/scratch/wenyuan/Mask-RCNN/Data_Pre_Processing/cedars-224\"\n",
-    "dataset_dir = \"/Users/wenyuan/Documents/MII/Mask_RCNN_On_Pathology/Data_Pre_Processing/cedars-224\"\n",
+    "dataset_dir = \"/data/wenyuan/Path_R_CNN/Data_Pre_Processing/cedars-224\"\n",
     "subset_1 = [0]\n",
     "dataset_train = prostate.ProstateDataset()\n",
     "dataset_train.load_prostate(dataset_dir, subset_1)\n",
@@ -462,22 +462,6 @@
     "visualize.display_instances(original_image, r['rois'], r['masks'], r['class_ids'], \n",
     "                            dataset_val.class_names, r['scores'], ax=get_ax())"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Evaluation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
