--- a/Mask_RCNN/Training/Train_prostate_mode.ipynb
+++ b/Mask_RCNN/Training/Train_prostate_mode.ipynb
@@ -16,6 +16,7 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "sys.path.append(os.path.dirname(os.getcwd()))\n",
     "import random\n",
     "import math\n",
     "import re\n",
@@ -108,7 +109,7 @@
    ],
    "source": [
     "import prostate\n",
-    "dataset_dir = \"/scratch/wenyuan/Mask_RCNN_On_Pathology/Data_Pre_Processing/cedars-224\"\n",
+    "dataset_dir = \"/data/wenyuan/Path_R_CNN/Data_Pre_Processing/cedars-224\"\n",
     "held_out_set = 4\n",
     "mean_pixel = prostate.Mean_pixel(dataset_dir, held_out_set)\n",
     "class TrainConfig(prostate.ProstateConfig):\n",
@@ -375,15 +376,6 @@
     "                    epochs=4,\n",
     "                    layers='3+')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
