--- a/ResNet/h5file_manipulation.ipynb
+++ b/ResNet/h5file_manipulation.ipynb
@@ -20,7 +20,7 @@
    },
    "outputs": [],
    "source": [
-    "root_dir = os.getcwd()\n",
+    "root_dir = os.path.dirname(os.getcwd())\n",
     "pre_t_filepath = os.path.join(root_dir, \"mask_rcnn_prostate_pretrained.h5\")\n",
     "resnet_filepath = os.path.join(root_dir, \"logs/prostate20180418T1255-held-out-set3(full)/mask_rcnn_prostate_0040.h5\")"
    ]
