--- a/ResNet/h5file_manipulation_coco.ipynb
+++ b/ResNet/h5file_manipulation_coco.ipynb
@@ -30,8 +30,7 @@
    ],
    "source": [
     "root_dir = os.path.dirname(os.getcwd())\n",
-    "filepath = os.path.join(root_dir, \"Mask_RCNN/mask_rcnn_coco.h5\")\n",
-    "filepath"
+    "filepath = os.path.join(root_dir, \"Mask_RCNN/mask_rcnn_coco.h5\")"
    ]
   },
   {
@@ -531,18 +530,6 @@
    "outputs": [],
    "source": [
     "combine_tumor_classifier(pre_t_filepath, resnet_filepath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# method to fetch the numpy data array from the h5 dataset object\n",
-    "# weight_pre = kenel_pre[()]"
    ]
   }
  ],
