--- a/Mask_RCNN/Evaluation/Prostate_evaluation.ipynb
+++ b/Mask_RCNN/Evaluation/Prostate_evaluation.ipynb
@@ -2,20 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
+    "sys.path.append(os.path.dirname(os.getcwd()))\n",
     "import random\n",
     "import math\n",
     "import re\n",
@@ -49,65 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Configurations:\n",
-      "BACKBONE_SHAPES                [[64 64]\n",
-      " [32 32]\n",
-      " [16 16]\n",
-      " [ 8  8]\n",
-      " [ 4  4]]\n",
-      "BACKBONE_STRIDES               [4, 8, 16, 32, 64]\n",
-      "BATCH_SIZE                     1\n",
-      "BBOX_STD_DEV                   [ 0.1  0.1  0.2  0.2]\n",
-      "DETECTION_MAX_INSTANCES        100\n",
-      "DETECTION_MIN_CONFIDENCE       0\n",
-      "DETECTION_NMS_THRESHOLD        1\n",
-      "GPU_COUNT                      1\n",
-      "IMAGES_PER_GPU                 1\n",
-      "IMAGE_MAX_DIM                  256\n",
-      "IMAGE_MIN_DIM                  256\n",
-      "IMAGE_PADDING                  True\n",
-      "IMAGE_SHAPE                    [256 256   3]\n",
-      "LEARNING_MOMENTUM              0.9\n",
-      "LEARNING_RATE                  0.001\n",
-      "MASK_POOL_SIZE                 14\n",
-      "MASK_SHAPE                     [28, 28]\n",
-      "MAX_GT_INSTANCES               100\n",
-      "MEAN_PIXEL                     [ 193.97197787  120.93338008  183.82220684]\n",
-      "MINI_MASK_SHAPE                (56, 56)\n",
-      "NAME                           prostate\n",
-      "NUM_CLASSES                    4\n",
-      "POOL_SIZE                      7\n",
-      "POST_NMS_ROIS_INFERENCE        1000\n",
-      "POST_NMS_ROIS_TRAINING         2000\n",
-      "ROI_POSITIVE_RATIO             0.33\n",
-      "RPN_ANCHOR_RATIOS              [0.5, 1, 2]\n",
-      "RPN_ANCHOR_SCALES              (16, 32, 64, 128, 256)\n",
-      "RPN_ANCHOR_STRIDE              1\n",
-      "RPN_BBOX_STD_DEV               [ 0.1  0.1  0.2  0.2]\n",
-      "RPN_NMS_THRESHOLD              0.7\n",
-      "RPN_TRAIN_ANCHORS_PER_IMAGE    256\n",
-      "STEPS_PER_EPOCH                500\n",
-      "TRAIN_ROIS_PER_IMAGE           64\n",
-      "USE_MINI_MASK                  True\n",
-      "USE_RPN_ROIS                   True\n",
-      "VALIDATION_STEPS               5\n",
-      "WEIGHT_DECAY                   0.0001\n",
-      "\n",
-      "\n",
-      "Loading weights from  /scratch/wenyuan/Mask-RCNN/Mask-RCNN-org/Mask_RCNN/logs/prostate20180124T1720-held-out-4/mask_rcnn_prostate_0160.h5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset_dir = \"/scratch/wenyuan/Mask-RCNN/Data_Pre_Processing/cedars-224\"\n",
+    "dataset_dir = \"/data/wenyuan/Path_R_CNN/Data_Pre_Processing/cedars-224\"\n",
     "held_out_set = 4\n",
     "mean_pixel = prostate.Mean_pixel(dataset_dir, held_out_set)\n",
     "class InferenceConfig(prostate.ProstateConfig):\n",
@@ -140,10 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dataset_val = prostate.ProstateDataset()\n",
@@ -155,10 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def instance_2_sementic(instance_mask, class_ids):\n",
@@ -186,10 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def save_sementic(result_dict, image_id, dataset_dir):\n",
@@ -200,10 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def prediction_2_sementic(mask, class_ids, scores):\n",
@@ -233,10 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def compute_mIOU(c_matrix):\n",
@@ -253,45 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done evaluating 20 / 576!\n",
-      "Done evaluating 40 / 576!\n",
-      "Done evaluating 60 / 576!\n",
-      "Done evaluating 80 / 576!\n",
-      "Done evaluating 100 / 576!\n",
-      "Done evaluating 120 / 576!\n",
-      "Done evaluating 140 / 576!\n",
-      "Done evaluating 160 / 576!\n",
-      "Done evaluating 180 / 576!\n",
-      "Done evaluating 200 / 576!\n",
-      "Done evaluating 220 / 576!\n",
-      "Done evaluating 240 / 576!\n",
-      "Done evaluating 260 / 576!\n",
-      "Done evaluating 280 / 576!\n",
-      "Done evaluating 300 / 576!\n",
-      "Done evaluating 320 / 576!\n",
-      "Done evaluating 340 / 576!\n",
-      "Done evaluating 360 / 576!\n",
-      "Done evaluating 380 / 576!\n",
-      "Done evaluating 400 / 576!\n",
-      "Done evaluating 420 / 576!\n",
-      "Done evaluating 440 / 576!\n",
-      "Done evaluating 460 / 576!\n",
-      "Done evaluating 480 / 576!\n",
-      "Done evaluating 500 / 576!\n",
-      "Done evaluating 520 / 576!\n",
-      "Done evaluating 540 / 576!\n",
-      "Done evaluating 560 / 576!\n",
-      "mIOU:  0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Compute mIOU as for the 4-classes prostate dataset\n",
     "# Running on 10 images. Increase for better accuracy.\n",
@@ -344,17 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(256, 256, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(image.shape)"
    ]
@@ -362,9 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Compute mIOU based on confusion matrix\n",
@@ -375,56 +258,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# scipy.io.savemat('./logs/confusion_matrix_held_out_%d.mat'%held_out_set, {'c_matrix' : C_MATRIX})"
+    "scipy.io.savemat('./logs/confusion_matrix_held_out_%d.mat'%held_out_set, {'c_matrix' : C_MATRIX})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## VISUALIZATION\n",
     "\n",
-    "# def get_ax(rows=1, cols=1, size=8):\n",
-    "#     \"\"\"Return a Matplotlib Axes array to be used in\n",
-    "#     all visualizations in the notebook. Provide a\n",
-    "#     central point to control graph sizes.\n",
+    "def get_ax(rows=1, cols=1, size=8):\n",
+    "    \"\"\"Return a Matplotlib Axes array to be used in\n",
+    "    all visualizations in the notebook. Provide a\n",
+    "    central point to control graph sizes.\n",
     "    \n",
-    "#     Change the default size attribute to control the size\n",
-    "#     of rendered images\n",
-    "#     \"\"\"\n",
-    "#     _, ax = plt.subplots(rows, cols, figsize=(size*cols, size*rows))\n",
-    "#     return ax"
+    "    Change the default size attribute to control the size\n",
+    "    of rendered images\n",
+    "    \"\"\"\n",
+    "    _, ax = plt.subplots(rows, cols, figsize=(size*cols, size*rows))\n",
+    "    return ax"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# image_id = np.random.choice(dataset_val.image_ids, 1)[0]\n",
-    "# image_id = 4\n",
-    "# original_image, image_meta, gt_class_id, gt_bbox, gt_mask =\\\n",
-    "#         modellib.load_image_gt(dataset_val, inference_config,\n",
-    "#                                image_id, use_mini_mask=False)\n",
-    "# visualize.display_instances(original_image, gt_bbox, gt_mask, gt_class_id, \n",
-    "#                             dataset_val.class_names, figsize=(8, 8))\n",
-    "# # Run object detection\n",
-    "# results = model.detect([original_image], verbose=0)\n",
-    "# r = results[0]\n",
-    "# visualize.display_instances(original_image, r['rois'], r['masks'], r['class_ids'], \n",
-    "#                             dataset_val.class_names, r['scores'], ax=get_ax())"
+    "image_id = np.random.choice(dataset_val.image_ids, 1)[0]\n",
+    "image_id = 4\n",
+    "original_image, image_meta, gt_class_id, gt_bbox, gt_mask =\\\n",
+    "        modellib.load_image_gt(dataset_val, inference_config,\n",
+    "                               image_id, use_mini_mask=False)\n",
+    "visualize.display_instances(original_image, gt_bbox, gt_mask, gt_class_id, \n",
+    "                            dataset_val.class_names, figsize=(8, 8))\n",
+    "# Run object detection\n",
+    "results = model.detect([original_image], verbose=0)\n",
+    "r = results[0]\n",
+    "visualize.display_instances(original_image, r['rois'], r['masks'], r['class_ids'], \n",
+    "                            dataset_val.class_names, r['scores'], ax=get_ax())"
    ]
   }
  ],
@@ -445,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
