--- a/Mask_RCNN/Evaluation/Prostate_evaluation_mode.ipynb
+++ b/Mask_RCNN/Evaluation/Prostate_evaluation_mode.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mask R-CNN - Detect on Prostate Dataset\n",
+    "# Mask R-CNN - Evaluation on Prostate Dataset\n",
     "\n",
-    "This notebook shows how to use trained Mask R-CNN on prostate dataset for whole slide. You'd need a GPU, though, because the network backbone is a Resnet101, which would be slow to detect on a CPU.\n",
+    "\n",
+    "This notebook shows how to use trained Mask R-CNN on prostate dataset for evaluation. As for large pathology image, we crop each image to several patches. This notebook is designed to get the detection reulst for single patch and evaluate them use mIOU. You'd need a GPU, though, because the network backbone is a Resnet101, which would be slow to detect on a CPU.\n",
     "\n",
     "The code of the Prostate dataset can be found in prostate.py."
    ]
@@ -27,6 +28,7 @@
     "# import module from system lib\n",
     "import os\n",
     "import sys\n",
+    "sys.path.append(os.path.dirname(os.getcwd()))\n",
     "import random\n",
     "import math\n",
     "import re\n",
@@ -52,12 +54,13 @@
     "import visualize\n",
     "from model import log\n",
     "import prostate\n",
+    "import pydensecrf.densecrf as dcrf\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
     "# Specify GPU to use\n",
     "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"   # see issue #152\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"3\"\n",
     "\n",
     "# Root directory of the project\n",
     "ROOT_DIR = os.getcwd()\n",
@@ -80,13 +83,13 @@
    "outputs": [],
    "source": [
     "# Specify the dir that store the prostate dataset\n",
-    "dataset_dir = os.path.join(os.path.dirname(os.getcwd()), \"Data_Pre_Processing/cedars-224\")\n",
+    "dataset_dir = os.path.join('/data/wenyuan/Path_R_CNN', \"Data_Pre_Processing/cedars-224\")\n",
     "# We do 5-fold validation, specify which fold to be exclude for the current run\n",
     "held_out_set = 4\n",
     "# Featch the mean_pixel based on the training data (data exclude the held_out_set)\n",
     "mean_pixel = prostate.Mean_pixel(dataset_dir, held_out_set)\n",
     "# Configuration\n",
-    "class DetectionConfig(prostate.ProstateConfig):\n",
+    "class EvaluationConfig(prostate.ProstateConfig):\n",
     "    GPU_COUNT = 1\n",
     "    IMAGES_PER_GPU = 1\n",
     "    DETECTION_MIN_CONFIDENCE = 0.5\n",
@@ -95,36 +98,10 @@
     "    IMAGE_MAX_DIM = 512\n",
     "    IMAGE_MIN_DIM = 512\n",
     "    DETECTION_CROP = [128, 384, 128, 384] # [height_crop_start, height_crop_end, width_crop_start, width_crop_end]\n",
-    "    MODE = -1\n",
-    "detection_config = DetectionConfig()\n",
-    "detection_config.display()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Notebook Figure Configure"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def get_ax(rows=1, cols=1, size=8):\n",
-    "    \"\"\"Return a Matplotlib Axes array to be used in\n",
-    "    all visualizations in the notebook. Provide a\n",
-    "    central point to control graph sizes.\n",
-    "    \n",
-    "    Change the default size attribute to control the size\n",
-    "    of rendered images\n",
-    "    \"\"\"\n",
-    "    _, ax = plt.subplots(rows, cols, figsize=(size*cols, size*rows))\n",
-    "    return ax"
+    "    MODE = 16\n",
+    "    USE_TUMORCLASS = True\n",
+    "evaluation_config = EvaluationConfig()\n",
+    "evaluation_config.display()"
    ]
   },
   {
@@ -137,19 +114,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Recreate the model in inference mode\n",
     "model = modellib.MaskRCNN(mode=\"detection\", \n",
-    "                          config=detection_config,\n",
+    "                          config=evaluation_config,\n",
     "                          model_dir=MODEL_DIR)\n",
     "# Get path to saved weights\n",
     "# Either set a specific path, find a trained weights specified by epoch and held_out_set or find last trained weights\n",
     "h5_filename = None # Specify the h5 filename here if you want to choose a specific file\n",
-    "epoch = -1\n",
+    "epoch = 71\n",
     "\n",
     "if h5_filename is not None:\n",
     "    model_path = os.path.join(ROOT_DIR, \".h5 file name here\")\n",
@@ -157,7 +132,7 @@
     "    model_path = model.find_last()[1]\n",
     "else:\n",
     "    try:\n",
-    "        model_path = model.find_specific(epoch = epoch, held_out_set = held_out_set)[1]\n",
+    "        model_path = model.find_specific(epoch = epoch, held_out_set = 0)[1]\n",
     "    except:\n",
     "        model_path = model.find_specific(epoch = epoch)[1]\n",
     "\n",
@@ -171,29 +146,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare the Dataset and Specify the Interested Image"
+    "## Prepare the Dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "Random = False # whether to randomly choose the image\n",
-    "# Specify the image that is interested in\n",
-    "val_list = [0]\n",
-    "# val_list = [image for image in val_list if image not in exclude_list]\n",
-    "if Random:\n",
-    "    _, val_list = dataset_val.generator_patition(dataset_dir, held_out_set)    \n",
-    "    image_id = random.choice(val_list)\n",
-    "    val_list = [image_id]\n",
-    "    image_patch_num = np.random.randint(0, detection_config.MODE)\n",
-    "\n",
     "dataset_val = prostate.ProstateDataset()\n",
-    "dataset_val.load_prostate(dataset_dir, val_list, mode = detection_config.MODE)\n",
+    "_, val_list = dataset_val.generator_patition(dataset_dir, held_out_set)\n",
+    "# val_list = [image for image in val_list if image not in exclude_list]\n",
+    "dataset_val.load_prostate(dataset_dir, val_list, mode = 16)\n",
     "dataset_val.prepare()"
    ]
   },
@@ -201,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load image and ground truth data"
+    "## Run Evaluation"
    ]
   },
   {
@@ -210,39 +175,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "original_image, image_meta, gt_class_id, gt_bbox, gt_mask =\\\n",
-    "    modellib.load_image_gt(dataset_val, inference_config, \n",
-    "                           image_id, use_mini_mask=False)\n",
-    "log(\"original_image\", original_image)\n",
-    "log(\"image_meta\", image_meta)\n",
-    "log(\"gt_class_id\", gt_class_id)\n",
-    "log(\"gt_bbox\", gt_bbox)\n",
-    "log(\"gt_mask\", gt_mask)\n",
-    "\n",
-    "visualize.display_instances(original_image, gt_bbox, gt_mask, gt_class_id, \n",
-    "                            dataset_val.class_names, figsize=(8, 8))"
+    "# Initialize the confusion matrix\n",
+    "C_MATRIX = np.zeros((4, 4))\n",
+    "# Create crop region\n",
+    "hv, wv = utils.create_crop_region(evaluation_config) # meshgrid for crop region\n",
+    "# Process display setting\n",
+    "display_step = 10 # print out process for every display_step images\n",
+    "total_image = len(val_list)\n",
+    "for image_id in dataset_val.image_ids:\n",
+    "    # Load image and ground truth data\n",
+    "    image, image_meta, gt_class_id, gt_bbox, gt_mask =\\\n",
+    "            modellib.load_image_gt(dataset_val, evaluation_config,\n",
+    "                                   image_id, use_mini_mask=False)\n",
+    "    # Convert gt-instance mask to gt-sementic mask\n",
+    "    gt_sementic_mask = utils.instance_2_sementic(gt_mask, gt_class_id)\n",
+    "    gt_sementic_mask = gt_sementic_mask['ATmask'][hv, wv] # crop the label\n",
+    "    # Run object detection\n",
+    "    results = model.detect([image], verbose=0)\n",
+    "    # TODO: create a function for evaluation in model\n",
+    "    r = results[0]    \n",
+    "#     if np.argmax(r['tumor_probs']) == 1 and len(r['class_ids']) != 0:\n",
+    "#         det_sementic_mask = r['sementic_mask']\n",
+    "#     else:\n",
+    "#         det_sementic_mask = np.zeros((image.shape[0], image.shape[1]))\n",
+    "    ## This section only enabled wo Diagnosit Network Head (DNH)\n",
+    "    if len(r['class_ids']) != 0:\n",
+    "        det_sementic_mask = r['sementic_mask']\n",
+    "    else:\n",
+    "        det_sementic_mask = np.zeros((image.shape[0], image.shape[1]))\n",
+    "    \n",
+    "    det_sementic_mask = det_sementic_mask[hv, wv] # crop the detection    \n",
+    "    # Compute confusion matrix\n",
+    "    c_matrix = confusion_matrix(np.ravel(gt_sementic_mask), np.ravel(det_sementic_mask))\n",
+    "    # Expand the c_matrix to NUM_CLASSES * NUM_CLASSES\n",
+    "    c_matrix = utils.expand_c_matrix(c_matrix, evaluation_config.NUM_CLASSES, gt_sementic_mask, det_sementic_mask)    \n",
+    "    # Update cofusion matrix\n",
+    "    C_MATRIX = C_MATRIX + c_matrix\n",
+    "    # Display the process\n",
+    "    if ((image_id + 1) % (evaluation_config.MODE * display_step) == 0):\n",
+    "        print('Done evaluating %d / %d!'%((image_id + 1) / evaluation_config.MODE, total_image))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run Detection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "results = model.detect([original_image], verbose=1)\n",
-    "r = results[0]\n",
-    "det_sementic_mask = r['sementic_mask']\n",
-    "visualize.display_instances(original_image, r['rois'], r['masks'], r['class_ids'], \n",
-    "                            dataset_val.class_names, r['scores'], ax=get_ax())"
+    "## Evaluation Results"
    ]
   },
   {
@@ -251,40 +229,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert gt-instance mask to gt-sementic mask\n",
-    "gt_sementic_mask = utils.instance_2_sementic(gt_mask, gt_class_id)\n",
-    "# Visualization the sementic map\n",
-    "visualize.display_sementic(original_image, gt_sementic_mask['ATmask'],\n",
-    "                            figsize=(8, 8))\n",
-    "visualize.display_sementic(original_image, det_sementic_mask,\n",
-    "                            figsize=(8, 8))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Evaluation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Compute confusion matrix\n",
-    "c_matrix = confusion_matrix(np.ravel(gt_sementic_mask['ATmask']), np.ravel(result_sementic))\n",
-    "c_matrix = utils.expand_c_matrix(c_matrix, detection_config.NUM_CLASSES)\n",
-    "\n",
-    "# Compute mIOU based on confusion matrix\n",
-    "mIOU, IOU, below_th = compute_mIOU(c_matrix, th = 0.5)\n",
-    "print('Confusion Matrix:\\n', c_matrix)\n",
+    "mIOU, IOU, below_th = utils.compute_mIOU(C_MATRIX, th = 0.5)\n",
+    "print('Confusion Matrix:\\n', C_MATRIX)\n",
     "print(' mIOU:', mIOU, '\\n', \n",
     "      'IOU for each class:', IOU, '\\n',\n",
     "      'Below_th:', below_th)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.io\n",
+    "filename = \"Set%d_wo_DNH\"%held_out_set\n",
+    "C_Matrix_dict = {filename:C_MATRIX}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = filename + \".mat\"\n",
+    "scipy.io.savemat(file_path, C_Matrix_dict)"
    ]
   }
  ],
@@ -304,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
