--- a/Mask_RCNN/Evaluation/Prostate_evaluation_mode_threshold.ipynb
+++ b/Mask_RCNN/Evaluation/Prostate_evaluation_mode_threshold.ipynb
@@ -21,15 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import module from system lib\n",
     "import os\n",
-    "import sys\n",
+    "sys.path.append(os.path.dirname(os.getcwd()))\n",
     "import random\n",
     "import math\n",
     "import re\n",
@@ -44,17 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import module from maskrcnn repo\n",
     "from config import Config\n",
@@ -86,68 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Configurations:\n",
-      "BACKBONE_SHAPES                [[128 128]\n",
-      " [ 64  64]\n",
-      " [ 32  32]\n",
-      " [ 16  16]\n",
-      " [  8   8]]\n",
-      "BACKBONE_STRIDES               [4, 8, 16, 32, 64]\n",
-      "BATCH_SIZE                     1\n",
-      "BBOX_STD_DEV                   [ 0.1  0.1  0.2  0.2]\n",
-      "DETECTION_CROP                 [128, 384, 128, 384]\n",
-      "DETECTION_MAX_INSTANCES        100\n",
-      "DETECTION_MIN_CONFIDENCE       0.5\n",
-      "DETECTION_NMS_THRESHOLD        1\n",
-      "GPU_COUNT                      1\n",
-      "IMAGES_PER_GPU                 1\n",
-      "IMAGE_MAX_DIM                  512\n",
-      "IMAGE_MIN_DIM                  512\n",
-      "IMAGE_PADDING                  True\n",
-      "IMAGE_SHAPE                    [512 512   3]\n",
-      "LEARNING_MOMENTUM              0.9\n",
-      "LEARNING_RATE                  0.001\n",
-      "MASK_POOL_SIZE                 14\n",
-      "MASK_SHAPE                     [28, 28]\n",
-      "MAX_GT_INSTANCES               100\n",
-      "MEAN_PIXEL                     [ 193.97800579  120.89113632  183.79060979]\n",
-      "MINI_MASK_SHAPE                (56, 56)\n",
-      "MODE                           16\n",
-      "NAME                           prostate\n",
-      "NUM_CLASSES                    4\n",
-      "POOL_SIZE                      7\n",
-      "POST_NMS_ROIS_INFERENCE        1000\n",
-      "POST_NMS_ROIS_TRAINING         2000\n",
-      "ROI_POSITIVE_RATIO             0.33\n",
-      "RPN_ANCHOR_RATIOS              [0.5, 1, 2]\n",
-      "RPN_ANCHOR_SCALES              (32, 64, 128, 256, 512)\n",
-      "RPN_ANCHOR_STRIDE              1\n",
-      "RPN_BBOX_STD_DEV               [ 0.1  0.1  0.2  0.2]\n",
-      "RPN_NMS_THRESHOLD              0.7\n",
-      "RPN_TRAIN_ANCHORS_PER_IMAGE    256\n",
-      "STEPS_PER_EPOCH                1000\n",
-      "TRAIN_ROIS_PER_IMAGE           200\n",
-      "USE_MINI_MASK                  True\n",
-      "USE_RPN_ROIS                   True\n",
-      "USE_TUMORCLASS                 True\n",
-      "VALIDATION_STEPS               50\n",
-      "WEIGHT_DECAY                   0.0001\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Specify the dir that store the prostate dataset\n",
-    "dataset_dir = os.path.join(os.path.dirname(os.getcwd()), \"Data_Pre_Processing/cedars-224\")\n",
+    "dataset_dir = os.path.join('/data/wenyuan/Path_R_CNN', \"Data_Pre_Processing/cedars-224\")\n",
     "# We do 5-fold validation, specify which fold to be exclude for the current run\n",
     "held_out_set = 4\n",
     "# Featch the mean_pixel based on the training data (data exclude the held_out_set)\n",
@@ -176,17 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading weights from  /scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/logs/prostate20180223T1554-held-out-4/mask_rcnn_prostate_0071.h5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Recreate the model in inference mode\n",
     "model = modellib.MaskRCNN(mode=\"detection\", \n",
@@ -222,10 +148,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dataset_val = prostate.ProstateDataset()\n",
@@ -246,22 +170,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of image is: 185\n",
-      "mIOU:  0.309812564818 IOU: [0.3567275054254076, 0, 0.88236172973449944, 0.00016102411336097581]\n",
-      "Number of image is: 7\n",
-      "mIOU:  0.207182060755 IOU: [0.12302101643555098, 0, 0.70570722658499863, 0]\n",
-      "Number of image is: 406\n",
-      "mIOU:  0.390507991118 IOU: [0.37746318724853622, 0.15613358169238956, 0.55401198955241104, 0.47442320597968202]\n",
-      "Number of image is: 196\n",
-      "mIOU:  0.226583410432 IOU: [0.20493004776673535, 0.0, 0.70140359396273266, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize the confusion matrix\n",
     "C_MATRIX = np.zeros((4, 4))\n",
@@ -328,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
