--- a/Mask_RCNN/Extract_mean_for_each_fold.ipynb
+++ b/Mask_RCNN/Extract_mean_for_each_fold.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "\"\"\"This ipynb extracts image mean of each channel of each fold\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import prostate\n",
     "import numpy as np"
@@ -20,38 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done caculating 100 images in held out set 0!\n",
-      "Done caculating 200 images in held out set 0!\n",
-      "Done caculating 300 images in held out set 0!\n",
-      "Done caculating 400 images in held out set 0!\n",
-      "Done caculating 100 images in held out set 1!\n",
-      "Done caculating 200 images in held out set 1!\n",
-      "Done caculating 300 images in held out set 1!\n",
-      "Done caculating 400 images in held out set 1!\n",
-      "Done caculating 100 images in held out set 2!\n",
-      "Done caculating 200 images in held out set 2!\n",
-      "Done caculating 300 images in held out set 2!\n",
-      "Done caculating 400 images in held out set 2!\n",
-      "Done caculating 100 images in held out set 3!\n",
-      "Done caculating 200 images in held out set 3!\n",
-      "Done caculating 300 images in held out set 3!\n",
-      "Done caculating 400 images in held out set 3!\n",
-      "Done caculating 100 images in held out set 4!\n",
-      "Done caculating 200 images in held out set 4!\n",
-      "Done caculating 300 images in held out set 4!\n",
-      "Done caculating 400 images in held out set 4!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset_dir = \"/scratch/wenyuan/Mask-RCNN/Data_Pre_Processing/cedars-224\"\n",
+    "dataset_dir = \"/data/wenyuan/Path_R_CNN/Data_Pre_Processing/cedars-224\"\n",
     "\n",
     "res_dict = {}\n",
     "\n",
@@ -73,27 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'1': array([ 194.0200627 ,  121.00573752,  183.84099475]), '2': array([ 194.05923719,  121.10764634,  183.85822645]), '3': array([ 193.97197787,  120.93338008,  183.82220684]), '4': array([ 193.97800579,  120.89113632,  183.79060979]), '0': array([ 193.95062641,  120.83140887,  183.74016669])}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(res_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "res_dict['explanation'] = 'training data pixel mean for 5 fold data split as done by cedars!'"
@@ -101,42 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'2': array([ 194.05923719,  121.10764634,  183.85822645]), '3': array([ 193.97197787,  120.93338008,  183.82220684]), '4': array([ 193.97800579,  120.89113632,  183.79060979]), '1': array([ 194.0200627 ,  121.00573752,  183.84099475]), 'explanation': 'training data pixel mean for 5 fold data split as done by cedars!', '0': array([ 193.95062641,  120.83140887,  183.74016669])}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(res_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "import scipy.io\n",
     "scipy.io.savemat('5_fold_train_pixel_mean', res_dict, appendmat=True, format='5', \n",
     "                 long_field_names=False, do_compression=False, oned_as='row')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -155,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
