--- a/Mask_RCNN/Find_all_stroma.ipynb
+++ b/Mask_RCNN/Find_all_stroma.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "\"\"\"This ipynb file help finds all the image that only have stroma\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -41,19 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_dir = \"/scratch/wenyuan/Mask_RCNN_On_Pathology/Data_Pre_Processing/cedars-224\"\n",
+    "dataset_dir = \"/data/wenyuan/Path_R_CNN/Data_Pre_Processing/cedars-224\"\n",
     "held_out_set = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,10 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dataset_val.load_prostate(dataset_dir, val_list, mode = 16)\n",
@@ -75,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,33 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Image_id : 337 is all stroma\n",
-      "Image_id : 370 is all stroma\n",
-      "Image_id : 168 is all stroma\n",
-      "Image_id : 262 is all stroma\n",
-      "Image_id : 393 is all stroma\n",
-      "Image_id : 260 is all stroma\n",
-      "Image_id : 222 is all stroma\n",
-      "Image_id : 15 is all stroma\n",
-      "Image_id : 219 is all stroma\n",
-      "Image_id : 237 is all stroma\n",
-      "Image_id : 423 is all stroma\n",
-      "Image_id : 367 is all stroma\n",
-      "Image_id : 18 is all stroma\n",
-      "Image_id : 40 is all stroma\n",
-      "Image_id : 375 is all stroma\n",
-      "Image_id : 499 is all stroma\n",
-      "Image_id : 47 is all stroma\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for image_id in range(0, len(dataset_val.image_ids), 16):\n",
     "    stroma = 0 \n",
@@ -130,15 +103,6 @@
     "    if (stroma == 0):\n",
     "        print('Image_id : %d is all stroma' %val_list[int(image_id / 16)])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -157,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
